<resources>
    <string name="app_name">JtunRouter</string>
    <string name="title_repeater">Repeater</string>
    <string name="title_tethering">Tethering</string>
    <string name="title_clients">Clients</string>
    <string name="title_settings">Settings</string>
    <string name="title_update">Update</string>
    <string name="repeater_channel">Repeater (%1$d MHz, channel %2$d)</string>
    <string name="repeater_wps">WPS (insecure)</string>
    <string name="repeater_wps_dialog_title">Enter PIN</string>
    <string name="repeater_wps_dialog_pbc">Push Button</string>
    <string name="repeater_wps_success_pbc">Please use WPS push button within the next 2 minutes to connect your
        device.</string>
    <string name="repeater_wps_success_keypad">PIN registered.</string>
    <string name="repeater_wps_failure">Failed to start WPS (reason: %s)</string>
    <string name="repeater_configure_failure">Valid config not found. Please start repeater first.</string>
    <string name="repeater_clean_pog_failure">Failed to remove redundant P2P group (reason: %s)</string>
    <string name="repeater_p2p_unavailable">Wi\u2011Fi direct unavailable, please enable Wi\u2011Fi</string>
    <string name="repeater_p2p_unavailable_enable">Enable</string>
    <string name="repeater_create_group_failure">Failed to create P2P group (reason: %s)</string>
    <string name="repeater_remove_group_failure">Failed to remove P2P group (reason: %s)</string>
    <string name="repeater_remove_old_group_failure">Failed to remove old P2P group (reason: %s)</string>
    <string name="repeater_set_oc_failure">Failed to set operating channel (reason: %s)</string>
    <string name="repeater_set_vendor_elements_failure">Failed to set vendor elements (reason: %s)</string>
    <string name="repeater_failure_reason_error">internal error</string>
    <string name="repeater_failure_reason_p2p_unsupported">Wi\u2011Fi direct unsupported</string>
    <string name="repeater_failure_reason_no_service_requests">no service requests added</string>
    <string name="repeater_failure_reason_unsupported_operation">unsupported operation</string>
    <string name="repeater_failure_disconnected">Service unavailable. Try again later</string>
    <string name="repeater_missing_location_permissions">Repeater requires permissions for accessing fine
        location</string>
    <string name="repeater_location_off">Due to system restrictions, turning Location off may lead to things not working
        properly and increased battery usage</string>
    <string name="repeater_location_off_configure">Configure</string>
    <string name="tethering_temp_hotspot">Temporary Wi\u2011Fi hotspot</string>
    <string name="tethering_location_off">This feature requires location to be turned on.</string>
    <string name="tethering_temp_hotspot_failure">Failed to start hotspot (reason: %s)</string>
    <string name="tethering_temp_hotspot_failure_no_channel">no channel</string>
    <string name="tethering_temp_hotspot_failure_generic">generic error</string>
    <string name="tethering_temp_hotspot_failure_incompatible_mode">incompatible mode</string>
    <string name="tethering_temp_hotspot_failure_tethering_disallowed">tethering disallowed</string>
    <string name="tethering_monitor">Monitor…</string>
    <string name="tethering_state_monitored">%s (monitored)</string>
    <string name="tethering_manage">Manage system tethering…</string>
    <string name="tethering_manage_offload_enabled">Please disable Tethering hardware acceleration in Developer options
        if VPN tethering does not work.</string>
    <string name="tethering_manage_usb">USB tethering</string>
    <string name="tethering_manage_wifi">Wi\u2011Fi hotspot</string>
    <string name="tethering_manage_bluetooth">Bluetooth tethering</string>
    <string name="tethering_manage_ethernet">Ethernet tethering</string>
    <string name="tethering_manage_ncm">USB tethering (NCM)</string>
    <string name="tethering_manage_wifi_info">%1$d MHz, channel %2$d, width %3$s</string>
    <string name="tethering_manage_wifi_info_timeout_enabled">%4$s: Wi\u2011Fi %5$d, %1$d MHz, channel %2$d,
        width %3$s, idle timeout in %6$s</string>
    <string name="tethering_manage_wifi_info_timeout_disabled">%4$s: Wi\u2011Fi %5$d, %1$d MHz, channel %2$d,
        width %3$s, idle timeout disabled</string>
    <plurals name="tethering_manage_wifi_capabilities">
        <item quantity="one">%1$s/%2$d client connected\nSupported features: %3$s</item>
        <item quantity="other">%1$s/%2$d clients connected\nSupported features: %3$s</item>
    </plurals>
    <plurals name="tethering_manage_wifi_clients">
        <item quantity="one">%d client connected</item>
        <item quantity="other">%1d clients connected</item>
    </plurals>
    <string name="tethering_manage_wifi_supported_channels">\nSupported channels: %s</string>
    <string name="tethering_manage_wifi_country_code">\nDriver country code: %s</string>
    <string name="tethering_manage_wifi_feature_ap_mac_randomization">Randomized AP MAC</string>
    <string name="tethering_manage_wifi_feature_bridged_ap_concurrency">Bridged AP concurrency</string>
    <string name="tethering_manage_wifi_feature_sta_ap_concurrency">STA + AP concurrency</string>
    <string name="tethering_manage_wifi_feature_sta_bridged_ap_concurrency">STA + Bridged AP concurrency</string>
    <string name="tethering_manage_wifi_no_features">None</string>
    <string name="tethering_manage_wifi_client_blocked">Blocked %1$s: %2$s</string>
    <string name="tethering_manage_wifi_copy_mac">Copy MAC</string>
    <string name="tethering_static_ip">Static IP</string>
    <string name="connected_state_incomplete">" (connecting)"</string>
    <string name="connected_state_valid">" (reachable)"</string>
    <string name="connected_state_failed">" (lost)"</string>
    <string name="clients_empty">No clients connected</string>
    <string name="clients_popup_nickname">Nickname…</string>
    <string name="clients_popup_block">Block</string>
    <string name="clients_popup_block_service_inactive">Turn on service for this interface to block the client.</string>
    <string name="clients_popup_unblock">Unblock</string>
    <string name="clients_popup_stats">Stats…</string>
    <string name="clients_mac_lookup_unexpected_error">Server returned error for %1$s: %2$s</string>
    <string name="clients_nickname_title">Nickname for %s</string>
    <string name="clients_nickname_set_to_vendor">← 🏳️‍🌈 Vendor</string>
    <string name="clients_stats_title">Stats for %s</string>
    <plurals name="clients_stats_message_1">
        <item quantity="one">Connected 1 time since %2$s</item>
        <item quantity="other">Connected %1$s times since %2$s</item>
    </plurals>
    <plurals name="clients_stats_message_2">
        <item quantity="one">Sent 1 packet, %2$s</item>
        <item quantity="other">Sent %1$s packets, %2$s</item>
    </plurals>
    <plurals name="clients_stats_message_3">
        <item quantity="one">Received 1 packet, %2$s</item>
        <item quantity="other">Received %1$s packets, %2$s</item>
    </plurals>
    <string name="settings_upstream">Upstream</string>
    <string name="settings_downstream">Downstream</string>
    <string name="settings_service_masquerade">IP Masquerade Mode</string>
    <string name="settings_service_masquerade_none">None</string>
    <string name="settings_service_masquerade_simple">Simple</string>
    <string name="settings_service_masquerade_netd">Android Netd Service</string>
    <string name="settings_service_disable_ipv6">Disable IPv6 tethering</string>
    <string name="settings_service_disable_ipv6_summary">Enabling this option will prevent VPN leaks via IPv6.</string>
    <string name="settings_service_auto_start">Auto start services</string>
    <string name="settings_service_auto_start_summary">Restore services if they were running before device reboot or app
        update</string>
    <string name="settings_service_repeater_safe_mode">Repeater safe mode</string>
    <string name="settings_service_repeater_safe_mode_summary">Makes no changes to your system configuration but might
        not work with short network names.</string>
    <string name="settings_service_repeater_safe_mode_warning">Short network names might require turning off safe
        mode.</string>
    <string name="settings_service_temp_hotspot_use_system">Use system configuration for temporary hotspot</string>
    <string name="settings_service_temp_hotspot_use_system_summary">Will conflict with other apps using local only
        hotspot</string>
    <string name="settings_service_wifi_lock">Keep Wi\u2011Fi alive</string>
    <string name="settings_service_wifi_lock_none">System default</string>
    <string name="settings_service_wifi_lock_full">On</string>
    <string name="settings_service_wifi_lock_high_perf">High Performance Mode</string>
    <string name="settings_service_wifi_lock_high_perf_v29">Disable power save</string>
    <string name="settings_service_wifi_lock_low_latency">Low latency mode</string>
    <string name="settings_service_ip_monitor">Network status monitor mode</string>
    <string name="settings_service_ip_monitor_monitor">Netlink monitor</string>
    <string name="settings_service_ip_monitor_monitor_root">Netlink monitor with root</string>
    <string name="settings_service_ip_monitor_poll">Poll</string>
    <string name="settings_service_ip_monitor_poll_root">Poll with root</string>
    <string name="settings_service_upstream_monitor">Current upstreams</string>
    <string name="settings_service_upstream_monitor_summary">%1$s; fallback: %2$s</string>
    <string name="settings_service_upstream">Upstream network interface</string>
    <string name="settings_service_upstream_auto">Auto detect system VPN</string>
    <string name="settings_upstream_fallback">Fallback upstream interface</string>
    <string name="settings_upstream_fallback_auto">Auto detect system default network</string>
    <string name="settings_service_dhcp_workaround">Enable DHCP workaround</string>
    <string name="settings_service_dhcp_workaround_summary">Use this if clients cannot obtain IP addresses.</string>
    <string name="settings_service_clean">Clean/reapply routing rules</string>
    <string name="settings_service_clean_summary">Update changed settings to current active services. Can also fix rare
        race conditions.</string>
    <string name="settings_system_tether_offload">Tethering hardware acceleration</string>
    <string name="settings_system_tether_offload_summary">Shortcut to system developer options</string>
    <string name="settings_misc">Misc</string>
    <string name="settings_help">Help</string>
    <string name="settings_misc_logcat">Export debug information</string>
    <string name="settings_misc_logcat_summary">Such useful very wow</string>
    <string name="settings_misc_source">Project homepage at GitHub</string>
    <string name="settings_misc_source_summary">Read manual, star, submit issues and contribute</string>
    <string name="settings_misc_donate">Donate</string>
    <string name="settings_misc_donate_summary">I love money</string>
    <string name="settings_misc_donate_more">GitHub sponsors, PayPal, more…</string>
    <string name="settings_restart_required">Restart this app to apply this setting.</string>
    <string name="settings_exit_app">Exit</string>
    <string name="notification_tethering_title">VPN tethering</string>
    <string name="device_connected">Device connected</string>
    <string name="connected_internet">Connected to the Internet</string>
    <string name="uploads">Uploads</string>
    <string name="downloads">Downloads</string>
    <string name="wifi_info">Wi-Fi Information</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="web">Web</string>
    <string name="device_id">Device ID</string>
    <string name="reboot">Reboot</string>
</resources>